test/ingress_be.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-microservice-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /backend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-microservice-svc
                port:
                  number: 8081
